app-src/scripts/sub-task-list/_sub-task-list-d.scss
sub-task-list task-list {
  // animation
  &.ng-enter,
  &.ng-leave {
    transition: all 0.2s $ease-in-out-quint;
  }

  &.ng-enter {
    opacity: 0;
    max-height: 0;
  }

  &.ng-enter.ng-enter-active {
    opacity: 1;
    max-height: 400px;
  }
  &.ng-leave {
    opacity: 1;
    max-height: 200px;

    // make sure icons won't be displayed outside the box
    ng-md-icon {
      visibility: hidden;
    }
  }

  &.ng-leave.ng-leave-active {
    max-height: 0;
    opacity: 1;
  }
}

.md-button.collapse-sub-tasks-btn {
  position: absolute;
  left: -23px;
  top: 6px;
  z-index: 2;
  padding: 0;
  width: 28px;
  height: 28px;
  min-width: 0;
  min-height: 0;

  // overwrite ripple transparency
  background: #ffffff !important;
  body.dark-theme & {
    background-color: $dark-theme-bg-lighter !important;
    color: #dddddd;
  }
}

